[project]
name = "agent-requests"
license = "MIT"
requires-python = "^3.11"


[tool.black]
line-length = 100

[tool.isort]
known_first_party = "agent_requests"
line_length = 100
skip_glob="**/__init__.py"
### for compatibility with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(module)s.%(funcName)s.%(lineno)d: %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = "-v --capture=sys tests"

[tool.vulture]
exclude=[]
paths = ["agent_requests", "vulture_allowlist.py"]

[tool.poetry]
name = "agent_requests"
version = "v0.1.0"
description = "A simple tool to fire off web requests with different user agents"
authors = ["Mike Salvatore <mike.s.salvatore@gmail.com>"]
license = "MIT"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11"
]
repository = "https://github.com/mssalvatore/agent-requests"
readme = "README.md"
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
click = "*"
requests = "*"

[tool.poetry.dev-dependencies]
black = "24.3.0"
dlint = "0.14.1"
flake8 = "6.0.0"
isort = "5.12.0"
mypy = "1.5.1"
pudb = "^2022.1.2"
pynvim = "^0.4.3"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^3.3.1"
vulture = "2.9.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=5.13.0"
types-requests = "^2.31.0.20240406"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
